Add module as gh repo and edit mounts settings

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
 
-  {{ $test := partial "debug/print" .Params }}
+  {{ $test := partial "func/GetSRC" "/uploads/test.jpg" }}
 
   {{ .Content }}
 
